initial filter implementation. TODO: add filters

--- a/Eulerity Async Images/Views/Base.lproj/Main.storyboard
+++ b/Eulerity Async Images/Views/Base.lproj/Main.storyboard
@@ -55,6 +55,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgD-74-uPg" userLabel="Filter">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                         <state key="normal" title="Add a Filter!"/>
+                                        <connections>
+                                            <action selector="filterImage" destination="7iZ-hl-0XR" eventType="touchUpInside" id="G4P-EF-WyK"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KWp-mi-fix" userLabel="Save">
                                         <rect key="frame" x="0.0" y="38" width="374" height="30"/>
